--- a/.gitattributes
+++ b/.gitattributes
@@ -59,3 +59,4 @@
 #*.RTF   diff=astextplain
 *.png filter=lfs diff=lfs merge=lfs -text
 *.bmp filter=lfs diff=lfs merge=lfs -text
+*.blend filter=lfs diff=lfs merge=lfs -text
