--- a/glDemo/glDemo.vcxproj.filters
+++ b/glDemo/glDemo.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="2DExamples.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GUClock.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -105,6 +108,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="2DExamples.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GUClock.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
