--- a/glDemo/glDemo.vcxproj.filters
+++ b/glDemo/glDemo.vcxproj.filters
@@ -112,5 +112,11 @@
     <Text Include="Assets\Shaders\basic_shader.vs.txt">
       <Filter>Shaders</Filter>
     </Text>
+    <Text Include="Assets\Shaders\effect1.fs.txt">
+      <Filter>Shaders</Filter>
+    </Text>
+    <Text Include="Assets\Shaders\effect1.vs.txt">
+      <Filter>Shaders</Filter>
+    </Text>
   </ItemGroup>
 </Project>
